# Base

./: CMakeLists.txt
cat/: CMakeLists.txt  main.c
init/: init.cfg  main.c
ls/: CMakeLists.txt  main.c
mkdir/: CMakeLists.txt  main.c
mount/: CMakeLists.txt  main.c
shell/: CMakeLists.txt  lexer.l  main.cpp  parser.y
shell/lisp/: lua.lisp
uname/: main.c
vfs/: FileSystem.cpp  main.cpp
